clean-up unused method and small optimization